--- a/public/frontend/assets/css/main.css
+++ b/public/frontend/assets/css/main.css
@@ -2346,7 +2346,8 @@ header{background:#157ed2}
  font-family: 'Montserrat', sans-serif;
  font-size:14px;
  font-weight:bold;
- text-transform:uppercase	
+ text-transform:uppercase;
+ color: #fff;
 }
 
 #owl-main .item .caption .big-text {
@@ -2393,7 +2394,7 @@ header{background:#157ed2}
 #owl-main .item .caption.bg-color .big-text {
   background: rgba(0, 0, 0, 0);
   padding: 0px;
-  color: #000;
+  color: #fff;
 }
 #owl-main .item .caption.bg-color .excerpt,
 #owl-main .item .caption.bg-color .small {
@@ -2410,6 +2411,7 @@ header{background:#157ed2}
   box-shadow: none;
   display: block;
   line-height: 24px;
+  color: #fff;
 }
 #owl-main .full-width-slider {
   margin-bottom: 30px;
