--- a/public/frontend/assets/css/style.css
+++ b/public/frontend/assets/css/style.css
@@ -5,3 +5,45 @@
 .f-paginator .pagination {
     margin-top: 0px
 }
+
+.modal-header {
+    display: flex;
+    justify-content: space-between;
+}
+
+img.card-img-top.pimage {
+    object-fit: contain;
+    width: 100%;
+}
+.pmodal-body{
+    position: relative;
+}
+.loading-snipper{
+    position: absolute;
+    top: 30%;
+    left: 50%;
+}
+
+.breadcrumb-inner ul li {
+    display: inline;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.breadcrumb-inner ul li:first-child {
+    padding-left: 0;
+}
+.visible {
+    visibility: visible;
+  }
+  .invisible {
+    visibility: hidden;
+  }
+
+@media (min-width: 768px){
+    .modal-content {
+        width: 700px;
+    }    
+}
+
+
